--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -8,13 +8,16 @@
     padding: 35px 35px 35px 40px;
     display: flex;
     &_img {
-      min-width: 180px;
+      width: 180px;
       height: 180px;
       margin-right: 30px;
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        &.img_contain {
+          object-fit: contain;
+        }
       }
     }
     &_about {
@@ -35,10 +38,13 @@
       line-height: 16px;
       max-width: 265px;
       margin-bottom: 13px;
+      max-height: 90px;
+      text-overflow: ellipsis;
     }
     &_nav {
       display: flex;
       justify-content: space-between;
+      width: 232px;
     }
   }
   &__random {
