--- a/src/components/Button/style.module.scss
+++ b/src/components/Button/style.module.scss
@@ -11,12 +11,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 0.3s ease-in-out;
+  text-decoration: none;
   &:active {
     opacity: 0.8;
+  }
+  &:hover {
+    transform: translateY(-3px);
   }
   &:after {
     content: "";
     position: absolute;
+    display: block;
     width: 0;
     height: 0;
     top: 0;
@@ -24,9 +30,11 @@
     border: 5px solid transparent;
     border-left: 5px solid #fff;
     border-top: 5px solid #fff;
+    transition: none;
   }
   &:before {
     content: "";
+    display: block;
     position: absolute;
     width: 0;
     height: 0;
@@ -35,6 +43,7 @@
     border: 5px solid transparent;
     border-right: 5px solid #fff;
     border-bottom: 5px solid #fff;
+    transition: none;
   }
 }
 
