--- a/src/components/MainSection/ListCharachters/CharacterItem/style.module.scss
+++ b/src/components/MainSection/ListCharachters/CharacterItem/style.module.scss
@@ -11,6 +11,9 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      &.img_contain {
+        object-fit: contain;
+      }
     }
   }
   &__name {
