--- a/src/components/App/style.module.scss
+++ b/src/components/App/style.module.scss
@@ -1,5 +1,18 @@
 .app {
-  background-image: url(../../assets/images/bg_app.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
+  position: relative;
+  z-index: 2;
+  &__background {
+    position: absolute;
+    width: 467px;
+    height: 372px;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
 }
