--- a/src/components/MainSection/SideBar/ComicsItem/style.module.scss
+++ b/src/components/MainSection/SideBar/ComicsItem/style.module.scss
@@ -1,9 +1,14 @@
 .item {
   list-style-type: none;
   width: 100%;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 4px 10px;
+  &__link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    display: block;
+    color: #000;
+    text-decoration: none;
+  }
 }
