--- a/src/components/MainSection/SideBar/style.module.scss
+++ b/src/components/MainSection/SideBar/style.module.scss
@@ -1,6 +1,8 @@
 .sidebar {
   padding: 25px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 100;
   &__character {
     display: flex;
     margin-bottom: 15px;
@@ -13,6 +15,11 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+    &_contain {
+      img {
+        object-fit: contain;
+      }
     }
   }
   &__nav {
@@ -48,5 +55,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+  &__notComics {
+    list-style-type: none;
   }
 }
