--- a/src/components/MainSection/ListCharachters/CharacterItem/style.module.scss
+++ b/src/components/MainSection/ListCharachters/CharacterItem/style.module.scss
@@ -4,6 +4,11 @@
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  &__inner {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+  }
   &__img {
     width: 200px;
     height: 200px;
@@ -23,9 +28,5 @@
     color: #ffffff;
     text-transform: uppercase;
     padding: 15px 15px 0 15px;
-  }
-  &_active {
-    filter: drop-shadow(0px 5px 20px #9f0013);
-    transform: translateY(-9px);
   }
 }
