--- a/src/components/MainSection/ListCharachters/style.module.scss
+++ b/src/components/MainSection/ListCharachters/style.module.scss
@@ -13,3 +13,10 @@
     padding: 45px 0;
   }
 }
+
+.character {
+  &_active {
+    filter: drop-shadow(0px 5px 20px #9f0013);
+    transform: translateY(-9px);
+  }
+}
